# fight_game

./: .gitignore  CMakeLists.txt  run.sh
include/: Armor.hpp  Character.hpp  Consumable.hpp  Golem.hpp  Inventory.hpp  Item.hpp  Knight.hpp  Spells.hpp  Weapon.hpp  Wizard.hpp  interface.hpp
src/: Armor.cpp  Character.cpp  Consumable.cpp  Golem.cpp  Inventory.cpp  Item.cpp  Knight.cpp  Spells.cpp  Weapon.cpp  Wizard.cpp  interface.cpp  main.cpp
